--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emerald Constructions - Builders of Excellence</title>
+    <title>Emerald Construction - Builders of Excellence</title>
+    <link rel="icon" type="image/jpeg" href="logo.jpg">
+    <link rel="shortcut icon" type="image/jpeg" href="logo.jpg">
+    <link rel="apple-touch-icon" href="logo.jpg">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +36,7 @@
             <div class="nav-wrapper">
                 <div class="logo">
                     <img src="logo.jpg" alt="Emerald Construction Logo" class="logo-image">
-                    <span class="logo-text">EMERALD CONSTRUCTIONS</span>
+                    <span class="logo-text">EMERALD CONSTRUCTION</span>
                 </div>
                 <div class="nav-links">
                     <a href="#home" class="nav-link active">Home</a>
@@ -821,7 +824,7 @@
                             <i class="fas fa-quote-left"></i>
                         </div>
                         <p class="testimonial-text">
-                            "Emerald Constructions transformed our vision into a stunning reality. <br>Their attention to 
+                            "Emerald Construction transformed our vision into a stunning reality. <br>Their attention to 
                             detail, professionalism, and commitment to excellence is unmatched. <br>Our dream home 
                             exceeded every expectation. Highly recommended!"
                         </p>
@@ -1099,7 +1102,7 @@
                 <div class="footer-column">
                     <div class="footer-logo">
                         <img src="logo.jpg" alt="Emerald Construction Logo" class="footer-logo-image">
-                        <span class="logo-text">EMERALD CONSTRUCTIONS</span>
+                        <span class="logo-text">EMERALD CONSTRUCTION</span>
                     </div>
                     <p class="footer-description">
                         Your trusted partner in creating exceptional spaces. Building excellence, 
@@ -1136,7 +1139,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p class="copyright">© 2025 Emerald Constructions. All Rights Reserved.</p>
+                <p class="copyright">© 2025 Emerald Construction. All Rights Reserved.</p>
                 <div class="footer-bottom-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms & Conditions</a>
